# IOT2022

./: README.md
final-simulate/judge/judge/: agent_simulate.py  config.py  keyboard_control.py  vehicle.py  waypoint_c.json5
lab1/: pyproject.toml
lab1 2/lab1/: __init__.py
lab2/: package.json  pyproject.toml
lab2/lab2/: __init__.py  controller.py
lab3/: package.json  pyproject.toml
lab3/lab3/: __init__.py  controller.py  waypoints.csv
lab4/: package.json  pyproject.toml
lab4/lab4/: __init__.py  keyboard_control.py  loop.py  main.py  ui.py  vehicle.py  world.py
lab4/lab4/agent/: __init__.py  student.py  ta.py
lab4/lab4/sensor/: __init__.py  camera_manager.py  collision.py  lidar.py  rgb_camera.py
