[tool.poetry]
name = "lab3"
version = "0.1.0"
description = ""
authors = ["jordanlin727 <r10944068@ntu.edu.tw>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
carla = "^0.9.13"
numpy = "^1.23.3"
pygame = "^2.1.2"

[tool.poetry.scripts]
main = "lab3:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
